# dataset_task_creation

./: .env.pilot.example  .gitignore  Alibaba Coding Evals ask.md  README.md
docs/: Turing SWEBench Public Dataset (Long-Range Tasks only, n=2551).xlsx  [External] Turing __ ReflectionAi - Swebench custom - Repositories list.xlsx  prsnl Copy of [External] Reflection AI -- SWE Bench Turing.docx  turing_approved_repos.txt  updated_reflection_reqs_9_july.docx
docs/alibaba/: README.md  rubrics_overall.yaml  taxonomy_v1.yaml
docs/msft_task_requirements/: msft_task_requirements.md
scripts/: README.md  batch_build_harbor_tasks.py  long_horizon_tasks.py  long_horizon_tasks_batch2.py  repair_model_runs.py  requirements.txt  run_anthropic_pilot.py  run_lh_pilot_batch.sh  tag_task.py
scripts/auto_qc/: README.md  auto_qc.py
scripts/auto_qc/ARIA-FOR-HARBOR/: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/auto_qc/ARIA-FOR-HARBOR/src/swebench_like_gen/: __init__.py  ai_annotation.py  cli.py  google_sheets.py  grading_test_extractor.py  harbor_loader.py  output_writer.py
scripts/auto_qc/ARIA-FOR-HARBOR/src/swebench_like_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skills/alibaba-eval-acceptance/: SKILL.md
skills/alibaba-harbor-task-build/: SKILL.md
skills/alibaba-rubric-authoring/: SKILL.md
skills/auto-qc/: SKILL.md
skills/auto_quality_fix/: SKILL.md  rubric_fix_playbook.md
skills/eval-trajectory-failure-analysis/: SKILL.md
skills/identify_hardening_levers/: SKILL.md  hardness_levers_catalog.md  (+1 more)
(+31 files in other folders)
